--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -12,7 +12,6 @@ test:
 
 # set these environment variables on your prod server
 production:
-  <<: *defaults
-  database: game_api
+  database: <%= ENV['MONGO_DB']
   username: <%= ENV['MONGO_USERNAME'] %>
   password: <%= ENV['MONGO_PASSWORD'] %>
