--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -12,6 +12,8 @@ test:
 
 # set these environment variables on your prod server
 production:
+  host: <%= ENV['MONGO_HOST'] %>
+  port: <%= ENV['MONGO_PORT'] %>
   database: <%= ENV['MONGO_DB'] %>
   username: <%= ENV['MONGO_USERNAME'] %>
   password: <%= ENV['MONGO_PASSWORD'] %>
